--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <li><a href="#">Blog</a></li>
       </ul>
 
-      <form class="search">
-        <input type="search" name="q" placeholder="Search query">
-        <input type="submit" value="Go!">
+      <form role="search" class="search">
+        <input type="search" name="q" placeholder="Search query" aria-label="Search our website for information!">
+        <input type="submit" value="Go!" aria-label="Submit search field for results">
       </form>
     </nav>
 
@@ -80,7 +80,6 @@
 
         <p>Wild bears eat a variety of meat, fish, fruit, nuts, and other natually growing ingredients. In general they will hunt for food themselves in woodland or rivers, but at a push they will track down their sustenance from farms or country houses. They tend to live in relative isolation, in caves, tents, or cottages.</p>
         
-        <!-- Made images more accessible by adding aria labels and ID's to relative paragraphs -->
         <img src="media/wild-bear.jpg" alt="Wild brown bear standing in water." title="Wild brown bear">
 
         <p>Urban (gentrified) bears on the other hand have largely abandoned the old ways. They will hunt other urban creatures if necessary (including other predators like rats and foxes), but prefer to scavenge from readily available urban food outlets like dumpsters, bins, and fast food joints. When food has proven scarce, urban bears have even been known to break into people's kitchens and steal essentials like baked beans, ready meals, and microwave ovens.</p>
@@ -100,6 +99,9 @@
           <p>It looks like your browser doesn't support HTML5 audio players.</p>
         </audio>
 
+        <p style="text-align: center">Audio Transcript: This isn't really an audio fact file about bears, but it is an audio file that you can transcribe.</p>
+        <a href="media/bear.mp3" download>Bear mating ritual facts audio file download</a>
+
         <aside>
           <h3>About the author</h3>
 
@@ -108,7 +110,7 @@
         </aside>
 
         <section class="comments">
-          <div class="show-hide">Show comments</div>
+          <button>Show comments</button>
 
           <div class="comment-wrapper">
 
@@ -116,12 +118,12 @@
 
             <form class="comment-form">
               <div class="flex-pair">
-                <p>Your name:</p>
+                <label for="name">Your name:</label>
                 <input type="text" name="name" id="name" placeholder="Enter your name">
               </div>
 
               <div class="flex-pair">
-                <p>Your comment:</p>
+                <label for="comment">Your comment:</label>
                 <input type="text" name="comment" id="comment" placeholder="Enter your comment">
               </div>
 
